fixed overflow y

--- a/site.css
+++ b/site.css
@@ -46,10 +46,9 @@
 /* ====================  GLOBAL ============================= */
 body, html{
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     color:#cacaca;
-    height: 100vh;
-    width: 100vh;
+    height:100%;
     /* background: #1d1d1d; */
     background-color: black;
 }
